@@ -3,6 +3,16 @@
   "uniques": 2,
   "clones": [
     {
+      "timestamp": "2026-01-22T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-23T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
       "timestamp": "2026-01-24T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -59,16 +69,6 @@
     },
     {
       "timestamp": "2026-02-04T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-05T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-06T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
